better readability and story fixes

--- a/packages/core/src/components/ButtonGroup/__stories__/buttonGroup.stories.scss
+++ b/packages/core/src/components/ButtonGroup/__stories__/buttonGroup.stories.scss
@@ -6,3 +6,10 @@
     margin-right: 60px;
   }
 }
+
+.monday-storybook-button-group-full-width {
+  width: clamp(250px, 100%, 750px);
+  border: 1px solid var(--ui-border-color);
+  padding: var(--spacing-medium);
+  border-radius: var(--border-radius-small);
+}
